third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_fun_type_fail.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `M::fun_type_in_prog` has a function parameter:
  ┌─ tests/more-v1/parser/spec_parsing_fun_type_fail.move:2:9
  │
2 │     fun fun_type_in_prog(p: |u64|u64) {
  │         ^^^^^^^^^^^^^^^^ - Parameter `p` has a function type.

warning: Unused parameter `p`. Consider removing or prefixing with an underscore: `_p`
  ┌─ tests/more-v1/parser/spec_parsing_fun_type_fail.move:2:26
  │
2 │     fun fun_type_in_prog(p: |u64|u64) {
  │                          ^
